<resources>
    <string name="app_name">Login/Signup Gps Template</string>
    <string name="company_name">Pinta WebWare</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- DIALOG -->
    <string name="dlg_password_reset">Reset Password?</string>
    <string name="dlg_location_permission_granted">Device location access was granted</string>
    <string name="dlg_location_permission_denied">Device location access was denied</string>

    <!-- LOGIN SCREEN -->
    <string name="lgn_email">E-mail</string>
    <string name="lgn_password">Password</string>
    <string name="lgn_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="lgn_signup">Signup?</string>
    <string name="permission_was_denied">Permission was denied</string>
    <string name="denied_message">If you reject permission, you can not use this service

Please turn on permissions at [Setting] > [Permission]</string>

    <!-- SIGNUP SCREEN -->
    <string name="btn_signup">Signup</string>
    <string name="lgn_login">Login?</string>

    <!--NAV DRAWER-->
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
</resources>
